# evolutionary-cot-vlm

./: LICENSE  README.md  evals.py  evolve.py  evolve.sh  gen_figures1.py  models.py  pyproject.toml  requirements.txt  utils.py
docs/: data_formats.md
evolutionary_cot_vlm/: constants.py  evals.py  evolve.py  evolve.sh  evolve_generations.py  evolve_single.sh  evolve_single_h100.sh  gen_figures1.py  models.py  promptbreeder.py  requirements.txt  seed_prefixes.jsonl  test.py
evolutionary_cot_vlm/old/: base_prompting.py  evolutionary.py
evolutionary_cot_vlm/utils/: dataset_loading.py
old/: cot.py  evaluate_results.py
src/: evolve.sh  evolve_generations.py  generate_prefixes.py  models.py  seed_prefixes.jsonl  test.py
src/old/: normal.py
src/utils/: dataset_loading.py
utils/: dataset_loading.py
