[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolutionary-cot-vlm"
version = "0.1.0"
authors = [
  { name="Katrina Brown", email="katrinabrown@college.harvard.edu" },
]
description = "Evolutionary Prompt Engineering for Vision-Language Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/brownkat6/evolutionary-cot-vlm"
"Bug Tracker" = "https://github.com/brownkat6/evolutionary-cot-vlm/issues"

[tool.hatch.build.targets.wheel]
packages = ["evolutionary_cot_vlm"] 